# internal/server/router.go
@@ -65,42 +65,42 @@ func NewRouter() *gin.Engine {
 	// v1 路由
 	v1 := r.Group("/api/v1")
 	{
-		v1.GET(":chainType/:tradeType/get_swap_route", api.GetSwapRoute)
-		v1.GET("token_launchpad_info/:chainType/:tokenAddress", api.GetTokenLaunchpadInfo)
-		v1.GET("token_pool_info_sol/:chainType/:tokenAddress", api.GetMarketInfo)
-		v1.GET("token_info/:chainType/:tokenAddress", api.GetTokenInfo)
-		v1.POST("token_prices/:chainType", api.GetTokenPrices)
-		v1.GET("rank/sol/pump", api.GetSolPumpRank)
-		v1.GET("rank/sol/new_pairs", api.GetSolDumpRank)
-		v1.GET("tokens/token_balance/:chainType/:owner/:token", api.GetTokenBalance)
-		v1.GET("chains/:chainType/gas_fee", api.GetSolGasFee)
-		v1.GET("chains/:chainType/native_token_price", api.GetSolPrice)
-		v1.GET("token_market_analytics/:chainType/:tokenAddress", api.GetTokenMarketAnalytics)
-		v1.GET("token_order_book/:chainType/:tokenAddress", api.GetTokenOrderBook)
-		v1.GET("tokens/search/:chainType/:tokenAddress", api.Search)
-		v1.GET("tokens/:klineType/:chainType/:tokenAddress", api.GetTokenKlines)
-		v1.GET("transaction/sol/send_swap_transaction", api.SendSwapRequest)
-		v1.GET("transaction/sol/get_swap_request_status", api.GetSwapRequestStatus)
-		v1.GET("search_documents_job", api.SearchDocumentsJob)
-		v1.GET("rank/sol/swap", api.GetSolSwapRank)
-		v1.GET("token_base_info/:chainType/:tokenAddress", api.GetTokenBaseInfo)
-		v1.GET("token_check_info/:chainType/:tokenAddress/:tokenPool", api.GetTokenCheckInfo)
-		v1.GET("token_market_analytics_search/:chainType/:tokenAddress", api.GetTokenMarketQuery)
-		v1.GET("pairs/:chainType/new_pair_ranks", api.GetNewPairRanks)
-		v1.GET("tools/token_info_sync", api.TokenInfoSyncJob)
+		// v1.GET(":chainType/:tradeType/get_swap_route", api.GetSwapRoute)
+		// v1.GET("token_launchpad_info/:chainType/:tokenAddress", api.GetTokenLaunchpadInfo)
+		// v1.GET("token_pool_info_sol/:chainType/:tokenAddress", api.GetMarketInfo)
+		// v1.GET("token_info/:chainType/:tokenAddress", api.GetTokenInfo)
+		// v1.POST("token_prices/:chainType", api.GetTokenPrices)
+		// v1.GET("rank/sol/pump", api.GetSolPumpRank)
+		// v1.GET("rank/sol/new_pairs", api.GetSolDumpRank)
+		// v1.GET("tokens/token_balance/:chainType/:owner/:token", api.GetTokenBalance)
+		// v1.GET("chains/:chainType/gas_fee", api.GetSolGasFee)
+		// v1.GET("chains/:chainType/native_token_price", api.GetSolPrice)
+		// v1.GET("token_market_analytics/:chainType/:tokenAddress", api.GetTokenMarketAnalytics)
+		// v1.GET("token_order_book/:chainType/:tokenAddress", api.GetTokenOrderBook)
+		// v1.GET("tokens/search/:chainType/:tokenAddress", api.Search)
+		// v1.GET("transaction/sol/send_swap_transaction", api.SendSwapRequest)
+		// v1.GET("transaction/sol/get_swap_request_status", api.GetSwapRequestStatus)
+		// v1.GET("search_documents_job", api.SearchDocumentsJob)
+		// v1.GET("rank/sol/swap", api.GetSolSwapRank)
+		// v1.GET("token_base_info/:chainType/:tokenAddress", api.GetTokenBaseInfo)
+		// v1.GET("token_check_info/:chainType/:tokenAddress/:tokenPool", api.GetTokenCheckInfo)
+		// v1.GET("token_market_analytics_search/:chainType/:tokenAddress", api.GetTokenMarketQuery)
+		// v1.GET("pairs/:chainType/new_pair_ranks", api.GetNewPairRanks)
+		// v1.GET("tools/token_info_sync", api.TokenInfoSyncJob)
 
 		// POST
-		v1.POST("user/login", api.Login)
+		v1.POST("users/login", api.Login)
+		v1.POST("users/my_info", api.Login)
 
 		// GET
 		v1.GET("tickers", api.Tickers)
 		v1.GET("tickers/{token_symbol}", api.GetTicker)
-
-		// v1.GET("tickers/swap_histories/{tickers_id}", api.GetMessage)
-		// v1.GET("tickers/token_distribution/{tickers_id}", api.GetMessage)
-
+		v1.GET("tickers/swap_histories/{tickers_id}", api.SwapHistories)
+		v1.GET("tickers/token_distribution/{tickers_id}", api.TokenDistribution)
 		// v1.GET("global/balance", api.GetMessage)
 		// v1.GET("global/sol_usd_price", api.GetMessage)
+
+		v1.GET("tokens/:klineType/:chainType/:tokenAddress", api.GetTokenKlines)
 
 		auth := v1.Group("")
 		auth.Use(interceptor.AuthRequired())
